--- a/src/main/resources/static/html/cep.html
+++ b/src/main/resources/static/html/cep.html
@@ -5,7 +5,7 @@
     <h3>Digite seu CEP e vamos descobrir seu endereço</h3>
     <div class="form-group">
         <label for="cep">cep:</label>
-        <input type="number" class="form-control" id="cep" ng-model="cep">
+        <input type="text" class="form-control" id="cep" ng-model="cep">
     </div>
 
     <div ng-show="carregando" class="col-md-12 text-center">
