--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -17,6 +17,7 @@
     <script src="bower_components/ng-dialog/js/ngDialog.min.js"></script>
 
 
+    <script src="js/ng-file-model.js"></script>
     <script src="js/tillaapp.js"></script>
     <script src="js/Upload.js"></script>
     <script src="js/WhatsappController.js"></script>
@@ -25,7 +26,7 @@
     <script src="js/ProdutosController.js"></script>
     <script src="js/FacebookController.js"></script>
     <script src="js/VendasController.js"></script>
-    <script src="js/LoginController.js"></script>
+
 
     <link rel="stylesheet" href="style.css">
 
@@ -36,10 +37,11 @@
 <body ng-controller="tillaCtrl">
     <div class="container">
 
-        <div class="jumbotron logo">
-            <h1>Tilla Viana</h1>
+       <!-- <div class="jumbotron logo">
+            <h1>Maven Nexus</h1>
             <h2 class="fancy"><span>Checkout</span></h2>
         </div>
+        -->
          <div class="row session">
             <ng-view></ng-view>
         </div>
