--- a/src/main/resources/static/vendas.html
+++ b/src/main/resources/static/vendas.html
@@ -17,6 +17,9 @@
     <script src="bower_components/ng-dialog/js/ngDialog.min.js"></script>
 
 
+
+    <script src="js/ng-file-model.js"></script>
+
     <script src="js/tillaapp.js"></script>
     <script src="js/Upload.js"></script>
     <script src="js/VendasController.js"></script>
@@ -29,15 +32,17 @@
 
 <body ng-controller="tillaCtrl">
     <div class="container" ng-controller="VendasController">
-
+<!--
         <div class="jumbotron logo">
             <h1>Tilla Viana</h1>
             <h2 class="fancy"><span>Checkout</span></h2>
         </div>
+
+        -->
          <div class="row session">
              <div class="col-md-6 col-md-padding-3">
 
-                 <table class="table table-striped" file-model="filem">
+                 <table class="table table-striped">
                      <thead>
                      <tr>
                          <th>Contato</th>
@@ -50,11 +55,6 @@
                      <tbody>
 
 
-
-
-
-
-
                      <tr ng-repeat="venda in vendas">
                          <td>
                              <i class="fa" ng-class="venda.whatsapp != 'null' ? 'fa-whatsapp' : 'fa-facebook-square'"></i>
@@ -62,22 +62,22 @@
                          </td>
                          <td>{{venda.produtos}}</td>
                          <td>{{venda.data}}</td>
-                         <td><a ng-href="{{url}}/comprovantes/{{venda.comprovante.id}}/image">comprovante</a> </td>
-                         <td>Nao Entregue
-
-                             <div ng-hide="fileSet()" >
-                                 <label for="upload{{venda.codigo}}">
-                                     <span  type="button" class="btn btn-success btn-lg"><i class="fa fa-file-image-o" aria-hidden="true"></i> Escolher Comprovante PAC</span>
-                                     <input type="file"  id="upload{{venda.codigo}}" style="display:none" ng-model="filem"/>
-                                 </label>
+                         <td><a ng-href="{{url}}/vendas/{{venda.codigo}}/comprovantes/image">comprovante</a> </td>
+                         <td>
+                             <div ng-hide="venda.comprovantePac">
+                                 <div ng-hide="$parent.file" >
+                                     <label for="upload">
+                                         <span  type="button" class="btn btn-warning btn-lg"><i class="fa fa-file-image-o" aria-hidden="true"></i>Escolher Comprovante Pac</span>
+                                         <input type="file"  id="upload" style="display:none" file-model="$parent.file"/>
+                                     </label>
+                                 </div>
+                                 <div ng-show="$parent.file" >
+                                     <span type="button"  ng-click="uploadFile3('1')" class="btn btn-success btn-lg"><i class="fa fa-paper-plane" aria-hidden="true"></i> Enviar Comprovante PAC</span>
+                                 </div>
                              </div>
-                             myFil3:{{myFile3}}
-                             vendas.codigo : {{venda.codigo}}
-                             <div>
-                                 <p><span type="button"  ng-click="uploadFile3(venda.codigo)" class="btn btn-success btn-lg"><i class="fa fa-paper-plane" aria-hidden="true"></i> Enviar Comprovante PAC</span></p>
-                                 </p>
+                             <div ng-show="venda.comprovantePac">
+                                 <a ng-href="{{url}}/vendas/{{venda.codigo}}/comprovantes-pac/image">comprovante PAC</a>
                              </div>
-
                          <div ng-show="uploading" class="big-icon" >
                              <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
                          </div>
