--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -26,6 +26,7 @@
     <script src="js/ProdutosController.js"></script>
     <script src="js/FacebookController.js"></script>
     <script src="js/VendasController.js"></script>
+    <script src="js/ConsultarController.js"></script>
 
 
     <link rel="stylesheet" href="style.css">
@@ -37,11 +38,11 @@
 <body ng-controller="tillaCtrl">
     <div class="container">
 
-       <!-- <div class="jumbotron logo">
+        <div class="jumbotron logo">
             <h1>Maven Nexus</h1>
             <h2 class="fancy"><span>Checkout</span></h2>
         </div>
-        -->
+        
          <div class="row session">
             <ng-view></ng-view>
         </div>
