--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -39,7 +39,7 @@
     <div class="container">
 
         <div class="jumbotron logo">
-            <h1>Maven Nexus</h1>
+            <h1>Tilla Viana</h1>
             <h2 class="fancy"><span>Checkout</span></h2>
         </div>
         
