--- a/src/main/resources/static/html/consultar.html
+++ b/src/main/resources/static/html/consultar.html
@@ -45,5 +45,8 @@
         </tbody>
     </table>
 
+    <h3>Não deixe de conferir sempre as novidades no nosso site:</h3>
+    <p><a type="button" href="http://www.ateliermakeup.com.br" class="btn btn-info btn-lg"><span>Ir para o site</span></a></p>
+
 
 </div>
