--- a/src/main/resources/static/vendas.html
+++ b/src/main/resources/static/vendas.html
@@ -72,7 +72,7 @@
                                      </label>
                                  </div>
                                  <div ng-show="$parent.file" >
-                                     <span type="button"  ng-click="uploadFile3('1')" class="btn btn-success btn-lg"><i class="fa fa-paper-plane" aria-hidden="true"></i> Enviar Comprovante PAC</span>
+                                     <span type="button"  ng-click="uploadFile3(venda.codigo)" class="btn btn-success btn-lg"><i class="fa fa-paper-plane" aria-hidden="true"></i> Enviar Comprovante PAC</span>
                                  </div>
                              </div>
                              <div ng-show="venda.comprovantePac">
