--- a/src/main/resources/static/html/comprovante.html
+++ b/src/main/resources/static/html/comprovante.html
@@ -10,7 +10,7 @@
             <div ng-show="vendaConcluida">
                 <h3>Não deixe de conferir sempre as novidades no nosso site:</h3>
                 <p><a type="button" href="http://www.ateliermakeup.com.br" class="btn btn-info btn-lg"><span>Ir para o site</span></a></p>
-                <h3>Lembre-se, voce pode ver o estado do pedido sempre que quiser aqui.</h3>
+                <h3>Lembre-se, voce pode ver o status do pedido sempre que quiser aqui.</h3>
                 <p><a type="button" href="#/consultar" class="btn btn-default btn-lg"><i class="fa fa-search"></i> <span>Consultar</span></a></p>
             </div>
 
