--- a/src/main/resources/static/vendas.html
+++ b/src/main/resources/static/vendas.html
@@ -61,7 +61,7 @@
                              <span>{{venda.whatsapp != 'null' ? venda.whatsapp : venda.facebook}}</span>
                          </td>
                          <td>{{venda.produtos}}</td>
-                         <td>{{venda.data}}</td>
+                         <td>{{ venda.data | date : "d/M/yyyy h:mm a" }}</td>
                          <td><a ng-href="{{url}}/vendas/{{venda.codigo}}/comprovantes/image">comprovante</a> </td>
                          <td>
                              <div ng-hide="venda.comprovantePac">
