--- a/src/main/resources/static/html/comprovante.html
+++ b/src/main/resources/static/html/comprovante.html
@@ -11,7 +11,7 @@
                 <h3>Não deixe de conferir sempre as novidades no nosso site:</h3>
                 <p><a type="button" href="http://www.ateliermakeup.com.br" class="btn btn-info btn-lg"><span>Ir para o site</span></a></p>
                 <h3>Lembre-se, voce pode ver o status do pedido sempre que quiser aqui.</h3>
-                <p><a type="button" href="#/consultar" class="btn btn-default btn-lg"><i class="fa fa-search"></i> <span>Consultar</span></a></p>
+                <p><a type="button" href="#/consultar?contato={{contato}}" class="btn btn-default btn-lg"><i class="fa fa-search"></i> <span>Consultar</span></a></p>
             </div>
 
             <div class="alert alert-danger" ng-show="erro">
@@ -23,10 +23,11 @@
                 <h3>Agora mande o comprovantezinho pra gente...</h3>
                 <label for="upload">
                     <span  type="button" class="btn btn-success btn-lg"><i class="fa fa-file-image-o" aria-hidden="true"></i> Escolher Comprovante</span>
-                    <input type="file"  id="upload" style="display:none" file-model="myFile"/>
+                    <input type="file"  id="upload" style="display:none" file-model="myFile" ng-model="myFile"/>
                 </label>
             </div>
             <div ng-show="fileSet()">
+                p: <img ngf-src="myFile[0]" class="thumb">
                 <h3>Pronto! Agora é só conferir e mandar!</h3>
                 <table class="table">
                     <thead>
@@ -39,6 +40,9 @@
                             <td>
                                 <i class="fa" ng-class="whatsapp != 'null' && whatsapp ? 'fa-whatsapp' : 'fa-facebook-square'"></i>
                                 <span>{{whatsapp != 'null' && whatsapp ? whatsapp : facebook}}</span>
+                                <div ng-show="email">
+                                    <i class="fa fa-envelope"></i> {{email}}
+                                </div>
                             </td>
                         </tr>
                     </tbody>
