--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,6 +27,7 @@
     <script src="js/FacebookController.js"></script>
     <script src="js/VendasController.js"></script>
     <script src="js/ConsultarController.js"></script>
+    <script src="js/EmailController.js"></script>
 
 
     <link rel="stylesheet" href="style.css">
