--- a/src/main/resources/static/html/consultar.html
+++ b/src/main/resources/static/html/consultar.html
@@ -1,10 +1,16 @@
 <div class="col-md-6 col-md-padding-3">
-    <h3>
-        <i class="fa fa-facebook-square"></i>
-        <i class="fa fa-whatsapp"></i>
-        <span>Escreva seu whats ou face usados no dia da compra:</span>
-    </h3>
-    <div class="form-group">
+    <div class="alert alert-info" ng-show="mostrarhelp">
+        <p>(1)PEDIDO_RECEBIDO: Recebemos seu pedido e estamos verificando o pagamento.</p>
+        <p>(2)PAGAMENTO_APROVADO: Identificamos o pagamento e estamos preparando sua encomenda. Levamos no máximo 1 dia pra isso :-) </p>
+        <p>(3)ENVIADO_CORREIOS: Enviamos sua encomenda pelo correio. Já já chega :-D</p>
+    </div>
+    <div class="form-group" ng-show="mostrarForm">
+        <h3>
+            <i class="fa fa-facebook-square"></i>
+            <i class="fa fa-whatsapp"></i>
+            <span>Escreva seu whats ou face usados no dia da compra:</span>
+        </h3>
+
         <label for="cliente">face ou whats:
             <input type="text" class="form-control" id="cliente" ng-model="cliente">
         </label>
@@ -14,13 +20,20 @@
             </button>
     </div>
 
+    <div ng-hide="mostrarForm">
+        <h3>Compras de {{cliente}}<small><a ng-click="mostrarForm = true"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a> </small>:</h3>
+    </div>
+
     <table class="table table-striped" ng-show="vendas">
         <thead>
             <tr>
                 <th>Produtos</th>
                 <th>Data</th>
                 <th>Comprovante</th>
-                <th>Estado</th>
+                <th>
+                    Estado
+                    <a ng-click="mostrarhelp = !mostrarhelp" data-toggle="popover" title="Status do seu pedido" ><span class="badge">?</span></a>
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -31,11 +44,11 @@
                 <td>{{ venda.data | date : "d/M/yyyy h:mm a" }}</td>
                 <td><a ng-href="{{url}}/vendas/{{venda.codigo}}/comprovantes/image">comprovante</a> </td>
                 <td>
-                    <div ng-hide="venda.comprovantePac">
-                        <span>Ainda nao foi postada. Se tem mais de 1 dia, entre em contato.</span>
+                    <div>
+                        [{{venda.vendaStatus}}]
                     </div>
                     <div ng-show="venda.comprovantePac">
-                        <a ng-href="{{url}}/vendas/{{venda.codigo}}/comprovantes-pac/image">comprovante PAC</a>
+                        <a ng-href="{{url}}/vendas/{{venda.codigo}}/comprovantes-pac/image">rastreio</a>
                     </div>
                     <div ng-show="uploading" class="big-icon">
                         <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
@@ -45,8 +58,9 @@
         </tbody>
     </table>
 
-    <h3>Não deixe de conferir sempre as novidades no nosso site:</h3>
+    <h4>Não deixe de conferir sempre as novidades no nosso site:</h4>
     <p><a type="button" href="http://www.ateliermakeup.com.br" class="btn btn-info btn-lg"><span>Ir para o site</span></a></p>
 
 
 </div>
+
