--- a/src/main/resources/static/html/comprovante.html
+++ b/src/main/resources/static/html/comprovante.html
@@ -20,7 +20,7 @@
 
 
             <div ng-hide="fileSet() || vendaConcluida">
-                <h3>Agora mande o comprovantezinho pra gente...</h3>
+                <h3>Agora mande o comprovantezinho pra gente (Foto ou print):</h3>
                 <label for="upload">
                     <span  type="button" class="btn btn-success btn-lg"><i class="fa fa-file-image-o" aria-hidden="true"></i> Escolher Comprovante</span>
                     <input type="file"  id="upload" style="display:none" file-model="myFile" ng-model="myFile"/>
