--- a/src/main/resources/static/html/produtos.html
+++ b/src/main/resources/static/html/produtos.html
@@ -5,7 +5,7 @@
     <h3>O que você comprou?</h3>
     <div class="form-group">
         <label for="cep">produtos e quantidades:</label>
-        <textarea placeholder="Flor, escreva aqui o que voce comprou. por exemplo: 3 caixas de clilos modelo 047, duas paletas atelier e um picel coastal scents"
+        <textarea placeholder="Escreva aqui o que voce comprou. por exemplo: 3 caixas de clilos modelo 047, duas paletas atelier e um picel coastal scents"
                   class="form-control" id="cep" ng-model="produtos" rows="7" ng-keyup="validarProdutos(produtos)"></textarea>
     </div>
     <div class="form-group" ng-show="produtos">
