--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,10 @@
 <html lang="en" ng-app="tillaApp">
 
 <head>
+    <meta property="og:image" content="http://rafaelhenrique.net/tillastatic/logo-tillaviana.png"/>
+    <meta property="og:title" content="Tilla Viana Makeup"/>
+    <meta property="og:description" content="Atelier Paris, Kryolan, Tilla Viana Eyelashes."/>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -33,6 +37,7 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Tilla Checkout</title>
+
 
 </head>
 
