--- a/src/main/resources/static/adm/relatorio.html
+++ b/src/main/resources/static/adm/relatorio.html
@@ -53,6 +53,7 @@
                          <th>Comprovante</th>
                          <th>Estado</th>
                          <th>Comprovante Correio</th>
+                         <th>Endereco</th>
                      </tr>
                      </thead>
                      <tbody>
@@ -118,6 +119,9 @@
                          <div ng-show="uploading" class="big-icon" >
                              <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
                          </div>
+                         </td>
+                         <td>
+                             {{venda.endereco}}
                          </td>
                      </tr>
                      </tbody>
