--- a/src/main/resources/static/html/consultar.html
+++ b/src/main/resources/static/html/consultar.html
@@ -31,7 +31,7 @@
                 <th>Data</th>
                 <th>Comprovante</th>
                 <th>
-                    Estado
+                    Status
                     <a ng-click="mostrarhelp = !mostrarhelp" data-toggle="popover" title="Status do seu pedido" ><span class="badge">?</span></a>
                 </th>
             </tr>
