--- a/src/main/resources/static/html/email.html
+++ b/src/main/resources/static/html/email.html
@@ -3,6 +3,8 @@
     <div class="form-group">
         <label for="email">email:</label>
         <input type="email" class="form-control" id="email" ng-model="email">
+    </div>
+    <div class="form-group">
         <button type="button" class="btn btn-success btn-lg" ng-click="processar(email)">Proximo Passo</button>
     </div>
 </div>
