--- a/src/main/resources/static/adm/etiqueta.html
+++ b/src/main/resources/static/adm/etiqueta.html
@@ -4,21 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
 
 
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../bower_components/angular/angular.min.js"></script>
-    <script src="../bower_components/angular-route/angular-route.js"></script>
-    <script src="../bower_components/x2js/xml2json.js"></script>
 
-    <script src="../bower_components/ng-dialog/js/ngDialog.min.js"></script>
-
-
-
-    <script src="../js/ng-file-model.js"></script>
 
     <script src="../js/tillaapp.js"></script>
     <script src="../js/Upload.js"></script>
@@ -40,7 +30,7 @@
 </head>
 
 <body ng-controller="tillaCtrl">
-    <div class="container" ng-controller="EtiquetaController">
+    <div ng-controller="EtiquetaController">
 
         <h1>Vendas com status=PAGAMENTO_APROVADO</h1>
 
