--- a/src/main/resources/static/adm/etiqueta.html
+++ b/src/main/resources/static/adm/etiqueta.html
@@ -8,10 +8,15 @@
 
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../bower_components/angular/angular.min.js"></script>
+    <script src="../bower_components/angular-route/angular-route.js"></script>
 
+    <script src="../bower_components/ng-dialog/js/ngDialog.min.js"></script>
+
+
+
+    <script src="../js/ng-file-model.js"></script>
 
     <script src="../js/tillaapp.js"></script>
-    <script src="../js/Upload.js"></script>
     <script src="js/EtiquetaController.js"></script>
 
 
