--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,10 +20,13 @@
 
     <script src="bower_components/ng-dialog/js/ngDialog.min.js"></script>
 
+    <script src="bower_components/JIC/dist/JIC.min.js"></script>
+
 
     <script src="js/ng-file-model.js"></script>
     <script src="js/tillaapp.js"></script>
     <script src="js/Upload.js"></script>
+    <script src="js/Compress.js"></script>
     <script src="js/WhatsappController.js"></script>
     <script src="js/CepController.js"></script>
     <script src="js/ComprovanteController.js"></script>
@@ -44,7 +47,7 @@
 <body ng-controller="tillaCtrl">
     <div class="container">
 
-        <div class="jumbotron logo">
+        <div class="jumbotron logo" ng-hide="true">
             <h1>Tilla Viana</h1>
             <h2 class="fancy"><span>Checkout</span></h2>
         </div>
