versao com compressao

--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -4,7 +4,7 @@
         <span class="close"  ng-click="erro = undefined"><i class="fa fa-times-circle" aria-hidden="true"></i></span>
     </div>
 
-
+<div ng-hide="erro">
     <h3>Quero informar meu endereço pois já comprei</h3>
     <p><a type="button" href="#/whatsapp" class="btn btn-default btn-lg"><i class="fa fa-whatsapp"></i> <span>Pelo Whatsapp</span></a></p>
     <p><a type="button" href="#/facebook" class="btn btn-default btn-lg"><i class="fa fa-facebook-square"></i> <span>Pelo Face/Messenger</span></a></p>
@@ -12,4 +12,5 @@
     <p><a type="button" href="#/consultar" class="btn btn-default btn-lg"><i class="fa fa-search"></i> <span>Consultar</span></a></p>
     <h3>Ainda não comprei</h3>
     <p><a type="button" href="http://www.ateliermakeup.com.br" class="btn btn-default btn-lg"><span>Quero comprar no site</span></a></p>
+</div>
 </div >
