versao com compressao

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,7 +47,7 @@
 <body ng-controller="tillaCtrl">
     <div class="container">
 
-        <div class="jumbotron logo" ng-hide="true">
+        <div class="jumbotron logo">
             <h1>Tilla Viana</h1>
             <h2 class="fancy"><span>Checkout</span></h2>
         </div>
